# mpytool

./: .gitignore  LICENSE  README.md  README_API.md  README_BENCH.md  README_MPREMOTE.md  README_bench.md  README_mpremote.md  mpytool.py  pyproject.toml  setup.py
.github/workflows/: integration.yml  tests.yml
completions/: _mpytool  mpytool.bash
mpytool/: __about__.py  __init__.py  cmd_cp.py  conn.py  conn_serial.py  conn_socket.py  logger.py  mount.py  mpy.py  mpy_comm.py  mpy_cross.py  mpytool.py  speedtest.py  terminal.py  terminal_unix.py  terminal_win.py  utils.py
tests/: test_cli.py  test_cmd_cp.py  test_conn_socket.py  test_errors.py  test_helpers.py  test_integration.py  test_mount.py  test_mpy.py  test_mpytool.py  test_utils.py
